# AI-Test-Engineer-Copilot

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements-optional.txt  requirements.txt  server.py
app/: __init__.py  agents.py  domain.py  langgraph_workflow.py  llm.py  main.py  mcp_tools.py  pipeline.py  rag.py
data/: sample_network_card_spec.md  sample_validation_log.txt
docs/: architecture.md  benchmark_report.md
evaluation/: README.md  dataset.json  results.csv  run_deepeval.py  run_evaluation.py  run_ragas.py  summary.json
frontend/: app.js  index.html  styles.css
tests/: test_pipeline.py
